[package]
name = "melvin"
version = "0.2.0"
authors = ["Andy Grover <agrover@redhat.com>"]
description = "A library for configuring an LVM-style volume manager"
documentation = "http://agrover.github.io/melvin/doc/melvin/index.html"
# homepage = "..."
repository = "https://github.com/agrover/melvin"
readme = "README.md"
keywords = ["Linux", "volume", "management", "storage"]
license = "MPL-2.0"
edition = "2018"

[[bin]]
name = "mlv"
path = "src/main.rs"

[lib]
name = "melvin"
path = "src/lib.rs"

[dependencies]
devicemapper = { git = "https://github.com/tasleson/devicemapper-rs", branch = "melvin" }
byteorder = "0.3.10"
crc = "^0.3.1"
nix = "0.19.1"
uuid = "0.1.17"
time = "0.1.32"
#docopt = "*"
#regex = "*"
